refactor: standardizing all project to fit to align with Maven standards